# pecel

./: CMakeLists.txt  Makefile  README.md  pecel.conf  test.py
.github/workflows/: ci.yml
src/: client.c  client.h  cmd.c  cmd.h  config.c  config.h  database.c  database.h  main.c  pecel_utils.c  pecel_utils.h  server.c  server.h  type.h  utils.h
